<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_register"
            android:inputType="text"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/etStudies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/studies_register"
            android:inputType="text"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/etExperience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/experience_register"
            android:inputType="text"
            android:layout_marginTop="16dp"/>
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"/>


        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/sing_up"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

</FrameLayout>