<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    android:columnCount="2"
    android:rowCount="2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/self_management"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />


    <FrameLayout
        android:id="@+id/frame_display_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:background="@color/color_primary"
        android:gravity="center"
        android:paddingHorizontal="15dp"
        android:paddingVertical="35dp">

        <Button
            android:id="@+id/login_display_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:padding="20dp"
            android:text="@string/login"
            android:textColor="@color/color_primary"
            android:textStyle="bold" />

        <Button
            android:id="@+id/profile_display_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:padding="20dp"
            android:text="@string/go_profile"
            android:textColor="@color/color_primary"
            android:textStyle="bold"
            android:visibility="gone" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_display_sing_up"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:background="@color/color_primary"
        android:gravity="center"
        android:paddingHorizontal="15dp"
        android:paddingVertical="35dp">

        <Button
            android:id="@+id/sing_up_display_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:padding="20dp"
            android:text="@string/sing_up"
            android:textColor="@color/color_primary"
            android:textStyle="bold" />

        <Button
            android:id="@+id/logout_display_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:padding="20dp"
            android:text="@string/logout"
            android:textColor="@color/color_primary"
            android:textStyle="bold"
            android:visibility="gone" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_display_schedule"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:background="@color/color_primary"
        android:gravity="center"
        android:paddingHorizontal="15dp"
        android:paddingVertical="35dp">

        <Button
            android:id="@+id/schedule_display_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:padding="20dp"
            android:text="@string/schedule_appointment"
            android:textColor="@color/color_primary"
            android:textStyle="bold" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_display_buy_gift_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:background="@color/color_primary"
        android:gravity="center"
        android:paddingHorizontal="15dp"
        android:paddingVertical="35dp">

        <Button
            android:id="@+id/gift_card_display_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:padding="20dp"
            android:text="@string/buy_gift_card"
            android:textColor="@color/color_primary"
            android:textStyle="bold" />

    </FrameLayout>
</GridLayout>