<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    android:columnCount="2"
    android:rowCount="3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/choose_your_style"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <FrameLayout
        android:id="@+id/frame_simple_cut"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:background="@color/color_primary"
        android:gravity="center"
        android:paddingHorizontal="15dp"
        android:paddingVertical="35dp">

        <ImageView
            android:id="@+id/image_simple_cut"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_primary"
            android:contentDescription="@string/simple_cut"
            android:scaleType="fitXY" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_opacity" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/simple_cut"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_simple_cut_and_beard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:paddingHorizontal="15dp"
        android:paddingVertical="35dp">

        <ImageView
            android:id="@+id/image_simple_cut_and_beard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/simple_cut_and_beard"
            android:scaleType="fitXY" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_opacity" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:gravity="center"
            android:text="@string/simple_cut_and_beard"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_specialized_cut"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:gravity="center"
        android:paddingHorizontal="15dp"
        android:paddingVertical="35dp">

        <ImageView
            android:id="@+id/image_specialized_cut"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/specialized_cut"
            android:scaleType="fitXY" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_opacity" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/specialized_cut"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_only_beard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:gravity="center"
        android:paddingHorizontal="15dp"
        android:paddingVertical="35dp">

        <ImageView
            android:id="@+id/image_only_beard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/only_beard"
            android:scaleType="fitXY" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_opacity" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/only_beard"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_painted_hair"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:gravity="center"
        android:paddingHorizontal="15dp"
        android:paddingVertical="35dp">

        <ImageView
            android:id="@+id/image_painted_hair"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/painted_hair"
            android:scaleType="fitXY" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_opacity" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/painted_hair"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_eye_brows"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:gravity="center"
        android:paddingHorizontal="15dp"
        android:paddingVertical="35dp">

        <ImageView
            android:id="@+id/image_eye_brows"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/eye_brows"
            android:scaleType="fitXY" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_opacity" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/eye_brows"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </FrameLayout>

</GridLayout>